fix 300x600 styling on frame1

--- a/300x600/index.html
+++ b/300x600/index.html
@@ -51,8 +51,8 @@
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].heroImage = {};
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].heroImage.Type = "file";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].heroImage.Url = "https://s0.2mdn.net/ads/richmedia/studio/44660889/44660889_20230921214703814_PsA_300x600_Endemic-N-A.jpg";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame1_copy = "<span class=\"spanColor\">Joint symptoms<\/span> <br>affecting you?";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame1_copy_style = "";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame1_copy = "¿Los <span class=\"spanColor\">síntomas en tus articulaciones<\/span> te acompañan en tus vacaciones?";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame1_copy_style = "fontSize:24,posX:-1,posY:40, width:250";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame2_copy = "For adults with <br>active psoriatic <br>arthritis";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame2_copy_style = "";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame2_copy2 = "Don't let symptoms define you.";
@@ -88,6 +88,7 @@
 
 <body>
     <div id="wrapper">
+        <img src="./ref.jpg" style="width: 300px; height: 600px; z-index: 100; position: relative; opacity: 0.4;">
         <div id="click_through"></div> 
         <div id="logo"></div>
         <div id="logo2"></div>
