--- a/160x600/index.html
+++ b/160x600/index.html
@@ -91,7 +91,7 @@
 
 <body>
     <div id="wrapper">
-        <img src="./ref6.jpg" style="width: 160px; height: 600px; z-index: 100; position: relative; opacity: 0.4;">
+        <!-- <img src="./ref6.jpg" style="width: 160px; height: 600px; z-index: 100; position: relative; opacity: 0.4;"> -->
         <div id="click_through"></div>
         <div id="logo"></div>
         <div id="logo2"></div>
