--- a/300x600/index.html
+++ b/300x600/index.html
@@ -53,27 +53,28 @@
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].heroImage.Url = "https://s0.2mdn.net/ads/richmedia/studio/44660889/44660889_20230921214703814_PsA_300x600_Endemic-N-A.jpg";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame1_copy = "¿Los <span class=\"spanColor\">síntomas en tus articulaciones<\/span> te acompañan en tus vacaciones?";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame1_copy_style = "fontSize:24,posX:-1,posY:40, width:250";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame2_copy = "For adults with <br>active psoriatic <br>arthritis";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame2_copy_style = "";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame2_copy2 = "Don't let symptoms define you.";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame2_copy2_style = "";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame3_copy = "TREMFYA<sup>\u00AE<\/sup> is proven to <span class=\"spanColor\">significantly reduce<\/span> joint pain, stiffness, and swelling";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame3_copy_style = "";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame3_copy2 = "In two medical studies, at 24 weeks, more than 5 out of 10 TREMFYA<sup>\u00AE<\/sup> patients had at least 20% improvement in active PsA symptoms. Results may vary.";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame3_copy2_style = "";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame4_copy = "More than joint relief--<span class=\"spanColor\">clearer skin, <\/span>too";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame4_copy_style = "";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame4_copy2 = "Psoriatic arthritis patients treated with TREMFYA<sup>\u00AE<\/sup> saw an improvement in psoriasis skin plaques. Results may vary.";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame5_copy = "<span class=\"spanColor\">Emerge as you<\/span> Ask your doctor <br>about TREMFYA<sup>\u00AE<\/sup>";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame5_copy_style = "";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame2_copy = "Para adultos con artritis<br>psoriásica activa";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame2_copy_style = "fontSize: 24, posX:-2,posY:0";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame2_copy2 = "No dejes que los síntomas te definan";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame2_copy2_style = "fontSize: 15, posX:1,posY:-24";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame3_copy = "TREMFYA<sup>\u00AE<\/sup> se administra<br>en <span class=\"spanColor\">una sola dosis cada<br>8 semanas,<\/span> después de<br>2 dosis iniciales.";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame3_copy_style = "fontSize: 23, posX:4,posY:-3";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame3_copy2 = "TREMFYA<sup>\u00AE<\/sup> es una inyección subcutánea de 100 mg que se debe tomar entre las semanas 0 y 4, y luego cada 8 semanas. Solo bajo prescripción.";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame3_copy2_style = "fontSize: 11.5, posX:4,posY:12";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame4_copy = "Son solo <span class=\"spanColor\">6 dosis de<br>mantenimiento<\/span> al año.";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame4_copy_style = "fontSize: 24, posX:-1,posY:0";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame4_copy2 = "TREMFYA<sup>\u00AE<\/sup> debe usarse bajo la guía y supervisión<br>de un médico. Los pacientes pueden autoinyectarse después de recibir entrenamiento adecuado y la aprobación del médico.";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame4_copy2_style = "fontSize: 12, posX:1,posY:8, width:305";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame5_copy = "<span class=\"spanColor\">Surge como tú<\/span> Pregúntale a tu <br>doctor sobre TREMFYA<sup>\u00AE<\/sup>";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame5_copy_style = "fontSize:24, lineHeight:32, posY:3";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].graphicImg1 = {};
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].graphicImg1.Type = "file";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].graphicImg1.Url = "https://s0.2mdn.net/ads/richmedia/studio/pv2/93514015/dirty/graphic-img1.png";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].graphicImg2 = {};
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].graphicImg2.Type = "file";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].graphicImg2.Url = "https://s0.2mdn.net/ads/richmedia/studio/pv2/93514447/dirty/graphic-img2.png";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].cta = "Learn more";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].cta_style = "";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].cta = "Aprende Más";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].cta_style = "width:100, height:21, fontSize:13";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].cta_url = {};
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].cta_url.Url = "https://www.tremfya.com/psoriatic-arthritis";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].med_url = {};
@@ -88,7 +89,7 @@
 
 <body>
     <div id="wrapper">
-        <img src="./ref.jpg" style="width: 300px; height: 600px; z-index: 100; position: relative; opacity: 0.4;">
+        <!-- <img src="./ref5.jpg" style="width: 300px; height: 600px; z-index: 100; position: relative; opacity: 0.4;"> -->
         <div id="click_through"></div> 
         <div id="logo"></div>
         <div id="logo2"></div>
