--- a/160x600/index.html
+++ b/160x600/index.html
@@ -208,10 +208,10 @@
                 <div id="isi-content">
  
                     <div class="main-copy">
-                        <h3 class="medium-margin teal-copy">INFORMACIÓN DE SEGURIDAD IMPORTANTE</h3>
-                        <p class="medium-margin bold-copy"><span class="teal-copy">¿Qué es lo más importante que debo saber sobre TREMFYA<sup>®</sup>?</span></p>
+                        <h3 class="medium-margin teal-copy">INFORMACIÓN DE SEGURIDAD<br>IMPORTANTE</h3>
+                        <p class="medium-margin bold-copy"><span class="teal-copy">¿Qué es lo más<br>importante que debo<br>saber sobre TREMFYA<sup>®</sup>?</span></p>
                         <p class="medium-margin bold-copy"><span class="teal-copy">
-                            <p class="medium-margin bold-copy"><span class="teal-copy">TREMFYA<sup>®</sup> es un medicamento recetado que puede causar<br>efectos secundarios<br>graves, como los<br>siguientes:</span></p>
+                            <p class="medium-margin bold-copy"><span class="teal-copy">TREMFYA<sup>®</sup> es un<br>medicamento recetado<br>que puede causar<br>efectos secundarios<br>graves, como los<br>siguientes:</span></p>
                         <ul class="list medium-margin">
                           <li class="medium-margin"><span class="list-copy"><b class="teal-copy">Reacciones alérgicas graves.</b> Deje de usar<br>TREMFYA<sup>®</sup> y busque<br>atención médica de<br>emergencia de inmediato<br>si tiene alguno de los<br>siguientes síntomas de<br>una reacción alérgica<br>grave: 
                         <ul class="sublist medium-margin-up">
@@ -224,7 +224,7 @@
                         </ul>
                         </span>
                         </li>
-                        <li class="medium-margin"><span class="list-copy"><b class="teal-copy">Infecciones.</b> TREMFYA<sup>®</sup><br>puede disminuir la<br>capacidad del sistema<br>inmune para combatir<br>infecciones y puede<br>aumentar el riesgo de<br>contraer infecciones. El<br>proveedor de atención<br>médica deberá realizarle<br>exámenes para detectar<br>infecciones y tuberculosis<br>(TB) antes de comenzar<br>el tratamiento con<br>TREMFYA<sup>®</sup> y es posible<br>que deba tratar la TB<br>antes de comenzar el<br>tratamiento con TREMFYA<sup>®</sup> si tiene<br>antecedentes de TB o TB<br>activa. El proveedor de<br>atención médica deberá<br>darle seguimiento de<br>cerca para detectar la<br>posible presencia de<br>signos y síntomas de TB<br>durante y después del<br>tratamiento con<br>TREMFYA<sup>®</sup>.</span></li>
+                        <li class="medium-margin"><span class="list-copy"><b class="teal-copy">Infecciones.</b> TREMFYA<sup>®</sup><br>puede disminuir la<br>capacidad del sistema<br>inmune para combatir<br>infecciones y puede<br>aumentar el riesgo de<br>contraer infecciones. El<br>proveedor de atención<br>médica deberá realizarle<br>exámenes para detectar<br>infecciones y tuberculosis<br>(TB) antes de comenzar<br>el tratamiento con<br>TREMFYA<sup>®</sup> y es posible<br>que deba tratar la TB<br>antes de comenzar el<br>tratamiento con<br>TREMFYA<sup>®</sup> si tiene<br>antecedentes de TB o TB<br>activa. El proveedor de<br>atención médica deberá<br>darle seguimiento de<br>cerca para detectar la<br>posible presencia de<br>signos y síntomas de TB<br>durante y después del<br>tratamiento con<br>TREMFYA<sup>®</sup>.</span></li>
                         <li class="no-bullet"><span class="list-copy">Comuníquele de<br>inmediato al proveedor de<br>atención médica si<br>presenta una infección o<br>tiene síntomas de esta,<br>entre los que se incluyen:
                             <ul class="sublist">
                         <li><span class="sublist-copy">fiebre, sudoración o<br>escalofríos;</span></li>
@@ -246,7 +246,7 @@
                           <li><span class="list-copy">Padece algunas de las<br>afecciones o los síntomas<br>especificados en la<br>sección <b>“¿Qué es lo más<br>importante que debo<br>saber sobre<br>TREMFYA<sup>®</sup>?”</b></span></li>
                           <li><span class="list-copy">Padece una infección que<br>no desaparece o siempre<br>reaparece.</span></li>
                           <li><span class="list-copy">Tiene TB o estuvo cerca<br>de alguien que tiene TB.</span></li>
-                          <li><span class="list-copy">Recibió recientemente o<br>tiene previsto recibir una<br>inmunización (vacuna).<br>Debe evitar la<br>administración<br>de vacunas atenuadas<br>durante el tratamiento con<br>TREMFYA<sup>®</sup>.</span></li>
+                          <li><span class="list-copy">Recibió recientemente o<br>tiene previsto recibir una<br>inmunización (vacuna).<br>Debe evitar la<br>administración de<br>vacunas atenuadas<br>durante el tratamiento con<br>TREMFYA<sup>®</sup>.</span></li>
                           <li><span class="list-copy">Está embarazada o<br>planea quedar<br>embarazada. Se<br>desconoce si TREMFYA<sup>®</sup><br>puede afectar al bebé por<br>nacer.</span></li>
                           <li><span class="list-copy">Está amamantando o<br>tiene previsto hacerlo. Se<br>desconoce si TREMFYA<sup>®</sup><br>pasa a través de la leche<br>materna.</span></li>
                         </ul>
@@ -255,7 +255,7 @@
                         <p class="medium-margin"><b class="teal-copy">Los efectos secundarios<br>más frecuentes de<br>TREMFYA<sup>®</sup> se incluyen<br>los siguientes: </b>infecciones<br>en el tracto respiratorio<br>superior, dolor de cabeza,<br>reacciones en el lugar de la<br>inyección, dolor en las<br>articulaciones (artralgia),<br>diarrea, gripe estomacal<br>(gastroenteritis),<br>infecciones por hongos de<br>la piel e infecciones por<br>herpes simple y bronquitis.</p>
                         <p class="medium-margin">Estos no son todos los<br>posibles efectos<br>secundarios de<br>TREMFYA<sup>®</sup>. Llame al<br>médico para pedir asesoría<br>médica sobre los efectos<br>secundarios.</p>
                         <p class="medium-margin">Utilice TREMFYA<sup>®</sup> <!-- exactamente como le indicó el<br>proveedor de atención médica.--></p>
-                        <!-- <p class="bold-copy medium-margin"><span class="teal-copy">Lea la </span><span id="ISI_PI_exit" class="exits"><a href="https://www.janssenlabels.com/package-insert/product-monograph/prescribing-information/TREMFYA-pi.pdf" target="_blank">información completa de prescripción</a></span><span class="teal-copy">,<br>incluida la </span><span id="ISI_MG_exit" class="exits"><a href="https://www.janssenlabels.com/package-insert/product-patient-information/TREMFYA-medication-guide.pdf" target="_blank">Guía del medicamento</a></span><span class="teal-copy"> para TREMFYA<sup>®</sup>, y<br>hable con su médico si tiene alguna pregunta.</span></p>
+                        <p class="bold-copy medium-margin"><span class="teal-copy">Lea la </span><span id="ISI_PI_exit" class="exits"><a href="https://www.janssenlabels.com/package-insert/product-monograph/prescribing-information/TREMFYA-pi.pdf" target="_blank">información completa de prescripción</a></span><span class="teal-copy">,<br>incluida la </span><span id="ISI_MG_exit" class="exits"><a href="https://www.janssenlabels.com/package-insert/product-patient-information/TREMFYA-medication-guide.pdf" target="_blank">Guía del medicamento</a></span><span class="teal-copy"> para TREMFYA<sup>®</sup>, y<br>hable con su médico si tiene alguna pregunta.</span></p>
                         <p class="large-margin bold-copy"><span class="teal-copy">Se le alienta a que informe los efectos secundarios<br>negativos de los medicamentos recetados a la FDA.<br>Visite <span id="ISI_FDA_exit" class="exits"><a href="https://www.fda.gov/medwatch" target="_blank">www.fda.gov/medwatch</a></span> o llame al<br><span class="nowrap">1‐800‐FDA‐1088</span>.</span>
                         </p>
                         <p class="large-margin">cp-254705v3</p>
@@ -264,8 +264,8 @@
 
                         <div><img src="https://s0.2mdn.net/creatives/assets/4984010/Tremfya-logo-HM-updated.png" id="devider-logos"></div>
                         <div class="legal"><span class="janssen-firm">© Janssen Biotech, Inc. 2024</span>
-                          <span class="date">03/24</span><span class="cp-code" id="cp_code">cp-422457v1</span>
-                        </div> -->
+                          <span class="date">03/24</span><span class="cp-code" id="cp_code_hm">cp-422457v1</span>
+                        </div>
                       </div>
     
 
@@ -283,7 +283,7 @@
         const element = document.querySelector('#isi-container');
         const element2 = document.querySelector('#isi-container-hm');
         let isHovered = false;
-        let speed = .277; // Change as needed
+        let speed = .465; // Change as needed
     
         function autoScroll(elem, scrollPos, spd) {
         let scrollAmount = scrollPos;
@@ -314,7 +314,7 @@
         setTimeout(function(){
             console.log('ISI HM Scroll start');
            autoScroll(element2, element2.scrollTop, speed);
-        }, 24500);
+        }, 20500);
         </script>
         <script>
             if (navigator.userAgent.search("Safari") >= 0 && navigator.userAgent.search("Chrome") < 0) 
