--- a/300x250/index.html
+++ b/300x250/index.html
@@ -205,7 +205,7 @@
                         <p class="large-margin" style="margin-top:-1px;">TREMFYA<sup>®</sup> is a prescription medicine used to treat adults with active psoriatic arthritis.</p>
                         <div><img src="https://s0.2mdn.net/creatives/assets/4941596/Tremfya-logo-updated.png" id="devider-logos"></div>
                         <div class="legal"><span class="janssen-firm">© Janssen Biotech, Inc. 2023</span>
-                          <span class="date">12/23</span><span class="cp-code" id="cp_code_hm">cp-400194v1</span></div>
+                          <span class="date">12/23</span><span class="cp-code" id="cp_code">cp-400194v1</span></div>
                       </div>
     
 
