--- a/300x600/index.html
+++ b/300x600/index.html
@@ -50,7 +50,7 @@
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].logo2.Url = "https://s0.2mdn.net/ads/richmedia/studio/pv2/93500672/dirty/logo2.png";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].heroImage = {};
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].heroImage.Type = "file";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].heroImage.Url = "https://s0.2mdn.net/ads/richmedia/studio/44660889/44660889_20230921214703814_PsA_300x600_Endemic-N-A.jpg";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].heroImage.Url = "https://s0.2mdn.net/creatives/assets/5144201/hero.png";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame1_copy = "¿Los <span class=\"spanColor\">síntomas en tus articulaciones<\/span> te acompañan en tus vacaciones?";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame1_copy_style = "fontSize:24,posX:-1,posY:40, width:250";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame2_copy = "Para adultos con artritis<br>psoriásica activa";
@@ -64,7 +64,7 @@
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame4_copy = "Son solo <span class=\"spanColor\">6 dosis de<br>mantenimiento<\/span> al año.";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame4_copy_style = "fontSize: 24, posX:-1,posY:0";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame4_copy2 = "TREMFYA<sup>\u00AE<\/sup> debe usarse bajo la guía y supervisión<br>de un médico. Los pacientes pueden autoinyectarse después de recibir entrenamiento adecuado y la aprobación del médico.";
-    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame4_copy2_style = "fontSize: 12, posX:1,posY:8, width:305";
+    devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame4_copy2_style = "fontSize: 12, posX:-2,posY:8, width:305";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame5_copy = "<span class=\"spanColor\">Surge como tú<\/span> Pregúntale a tu <br>doctor sobre TREMFYA<sup>\u00AE<\/sup>";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].frame5_copy_style = "fontSize:24, lineHeight:32, posY:3";
     devDynamicContent.DRAFT_Tremfya_PsA_Wave2_Addressable_2023_masterfeed[0].graphicImg1 = {};
@@ -89,7 +89,7 @@
 
 <body>
     <div id="wrapper">
-        <!-- <img src="./ref5.jpg" style="width: 300px; height: 600px; z-index: 100; position: relative; opacity: 0.4;"> -->
+        <!-- <img src="./ref.jpg" style="width: 300px; height: 600px; z-index: 100; position: relative; opacity: 0.4;"> -->
         <div id="click_through"></div> 
         <div id="logo"></div>
         <div id="logo2"></div>
@@ -97,7 +97,7 @@
 			<div class="fold">
                 <div id="heroImage"></div>
                 <div id="frame1">
-                        <div id="frame1_copy"></div>
+                        <div id="frame1_copy" class="frame1_copy_shadowed"></div>
                 </div>
 			</div>
 			  
@@ -226,7 +226,7 @@
                         <p class="medium-margin bold-copy"><span class="teal-copy">
                             <p class="medium-margin bold-copy"><span class="teal-copy">TREMFYA<sup>®</sup> es un medicamento recetado que puede<br>causar efectos secundarios graves, como los<br>siguientes:</span></p>
                         <ul class="list medium-margin">
-                          <li class="medium-margin"><span class="list-copy"><b class="teal-copy">Reacciones alérgicas graves.</b> Deje de usar<br>TREMFYA<sup>®</sup> y busque atención médica de emergencia<br>de inmediato si tiene alguno de los siguientes síntomas<br>de una reacción alérgica grave: 
+                          <li class="medium-margin"><span class="list-copy"><b class="teal-copy">Reacciones alérgicas graves.</b> Deje de usar TREMFYA<sup>®</sup><br>y busque atención médica de emergencia de inmediato si<br>tiene alguno de los siguientes síntomas de una reacción<br>alérgica grave: 
                         <ul class="sublist medium-margin-up">
                           <li><span class="sublist-copy">desmayos, mareos, sensación de desvanecimiento<br>(presión arterial baja)</span></li>
                           <li><span class="sublist-copy">inflamación de la cara, los párpados, los labios, la<br>boca, la lengua o la garganta</span></li>
@@ -237,8 +237,8 @@
                         </ul>
                         </span>
                         </li>
-                        <li class="medium-margin"><span class="list-copy"><b class="teal-copy">Infecciones.</b> TREMFYA<sup>®</sup> puede disminuir la<br>capacidad del sistema inmune para combatir<br>infecciones y puede aumentar el riesgo de contraer<br>infecciones. El proveedor de atención médica deberá<br>realizarle exámenes para detectar infecciones y<br>tuberculosis (TB) antes de comenzar el tratamiento con<br>TREMFYA<sup>®</sup> y es posible que deba tratar la TB antes<br>de comenzar el tratamiento con TREMFYA<sup>®</sup> si tiene<br>antecedentes de TB o TB activa. El proveedor de<br>atención médica deberá darle seguimiento de cerca<br>para detectar la posible presencia de signos y<br>síntomas de TB durante y después del tratamiento con<br>TREMFYA<sup>®</sup>.</span></li>
-                        <li class="no-bullet"><span class="list-copy">Comuníquele de inmediato al proveedor de atención<br>médica si presenta una infección o tiene síntomas de<br>esta, entre los que se incluyen:
+                        <li class="medium-margin"><span class="list-copy"><b class="teal-copy">Infecciones.</b> TREMFYA<sup>®</sup> puede disminuir la capacidad del<br>sistema inmune para combatir infecciones y puede<br>aumentar el riesgo de contraer infecciones. El proveedor<br>de atención médica deberá realizarle exámenes para<br>detectar infecciones y tuberculosis (TB) antes de comenzar<br>el tratamiento con TREMFYA<sup>®</sup> y es posible que deba tratar<br>la TB antes de comenzar el tratamiento con TREMFYA<sup>®</sup> si<br>tiene antecedentes de TB o TB activa. El proveedor de<br>atención médica deberá darle seguimiento de cerca para<br>detectar la posible presencia de signos y síntomas de TB<br>durante y después del tratamiento con TREMFYA<sup>®</sup>.</span></li>
+                        <li class="no-bullet"><span class="list-copy">Comuníquele de inmediato al proveedor de atención<br>médica si presenta una infección o tiene síntomas de esta,<br>entre los que se incluyen:
                             <ul class="sublist">
                         <li><span class="sublist-copy">fiebre, sudoración o escalofríos;</span></li>
                         <li><span class="sublist-copy">dolores musculares;</span></li>
@@ -248,27 +248,27 @@
                         <li><span class="sublist-copy">diarrea o dolor de estómago;</span></li>
                         <li><span class="sublist-copy">falta de aire;</span></li>
                         <li><span class="sublist-copy">esputo (mucosidad) con sangre;</span></li>
-                        <li><span class="sublist-copy">ardor al orinar u orinar con más frecuencia de lo<br>normal.</span></li>
+                        <li><span class="sublist-copy">ardor al orinar u orinar con más frecuencia de lo normal.</span></li>
                         </ul>
                         </span>
                         </li>
                         </ul>
                         <p class="medium-margin"><b class="teal-copy">No se inyecte TREMFYA<sup>®</sup></b> si ha tenido una reacción<br>alérgica grave a guselkumab o cualquiera de los<br>componentes de TREMFYA<sup>®</sup>.</p>
-                        <p class="bold-copy teal-copy medium-margin" style="margin-top:10px;">Antes de utilizar TREMFYA<sup>®</sup>, bríndele información al<br>proveedor de atención médica sobre todas las<br>enfermedades que padece, incluso si presenta algo<br>de lo siguiente:</p>
+                        <p class="bold-copy teal-copy medium-margin" style="margin-top:10px;">Antes de utilizar TREMFYA<sup>®</sup>, bríndele información al<br>proveedor de atención médica sobre todas las<br>enfermedades que padece, incluso si presenta algo de<br>lo siguiente:</p>
                         <ul class="list black-bullet">
-                          <li><span class="list-copy">Padece algunas de las afecciones o los síntomas<br>especificados en la sección <b>“¿Qué es lo más<br>importante que debo saber sobre TREMFYA<sup>®</sup>?”</b></span></li>
+                          <li><span class="list-copy">Padece algunas de las afecciones o los síntomas<br>especificados en la sección <b>“¿Qué es lo más importante<br>que debo saber sobre TREMFYA<sup>®</sup>?”</b></span></li>
                           <li><span class="list-copy">Padece una infección que no desaparece o siempre<br>reaparece.</span></li>
                           <li><span class="list-copy">Tiene TB o estuvo cerca de alguien que tiene TB.</span></li>
-                          <li><span class="list-copy">Recibió recientemente o tiene previsto recibir una<br>inmunización (vacuna). Debe evitar la administración<br>de vacunas atenuadas durante el tratamiento con<br>TREMFYA<sup>®</sup>.</span></li>
-                          <li><span class="list-copy">Está embarazada o planea quedar embarazada. Se<br>desconoce si TREMFYA<sup>®</sup> puede afectar al bebé por<br>nacer.</span></li>
-                          <li><span class="list-copy">Está amamantando o tiene previsto hacerlo. Se<br>desconoce si TREMFYA® pasa a través de la leche<br>materna.</span></li>
+                          <li><span class="list-copy">Recibió recientemente o tiene previsto recibir una<br>inmunización (vacuna). Debe evitar la administración de<br>vacunas atenuadas durante el tratamiento con<br>TREMFYA<sup>®</sup>.</span></li>
+                          <li><span class="list-copy">Está embarazada o planea quedar embarazada. Se<br>desconoce si TREMFYA<sup>®</sup> puede afectar al bebé por nacer.</span></li>
+                          <li><span class="list-copy">Está amamantando o tiene previsto hacerlo. Se desconoce<br>si TREMFYA® pasa a través de la leche materna.</span></li>
                         </ul>
-                        <p class="medium-margin medium-margin-up"><b class="teal-copy">Hable con su proveedor de atención médica acerca<br>de todos los medicamentos que toma,</b> incluidos los<br>medicamentos con receta y los de venta libre, las<br>vitaminas y los suplementos naturales. </p>
-                        <p class="medium-margin"><b class="teal-copy">¿Cuáles son los posibles efectos secundarios de TREMFYA<sup>®</sup>?</b><b> TREMFYA<sup>®</sup> puede provocar efectos<br>secundarios graves. Consulte “¿Qué es lo más<br>importante que debo saber sobre TREMFYA<sup>®</sup>?”</b></p>
-                        <p class="medium-margin"><b class="teal-copy">Los efectos secundarios más frecuentes de<br>TREMFYA<sup>®</sup> se incluyen los siguientes: </b>infecciones en<br>el tracto respiratorio superior, dolor de cabeza,<br>reacciones en el lugar de la inyección, dolor en las<br>articulaciones (artralgia), diarrea, gripe estomacal<br>(gastroenteritis), infecciones por hongos de la piel e<br>infecciones por herpes simple y bronquitis.</p>
-                        <p class="medium-margin">Estos no son todos los posibles efectos secundarios de<br>TREMFYA<sup>®</sup>. Llame al médico para pedir asesoría<br>médica sobre los efectos secundarios.</p>
-                        <p class="medium-margin">Utilice TREMFYA<sup>®</sup> exactamente como le indicó el<br>proveedor de atención médica.</p>
-                        <p class="bold-copy medium-margin"><span class="teal-copy">Lea la </span><span id="ISI_PI_exit" class="exits"><a href="https://www.janssenlabels.com/package-insert/product-monograph/prescribing-information/TREMFYA-pi.pdf" target="_blank">información completa de prescripción</a></span><span class="teal-copy">,<br>incluida la </span><span id="ISI_MG_exit" class="exits"><a href="https://www.janssenlabels.com/package-insert/product-patient-information/TREMFYA-medication-guide.pdf" target="_blank">Guía del medicamento</a></span><span class="teal-copy"> para TREMFYA<sup>®</sup>, y<br>hable con su médico si tiene alguna pregunta.</span></p>
+                        <p class="medium-margin medium-margin-up"><b class="teal-copy">Hable con su proveedor de atención médica acerca de<br>todos los medicamentos que toma,</b> incluidos los<br>medicamentos con receta y los de venta libre, las vitaminas<br>y los suplementos naturales. </p>
+                        <p class="medium-margin"><b class="teal-copy">¿Cuáles son los posibles efectos secundarios de<br>TREMFYA<sup>®</sup>?</b><b> TREMFYA<sup>®</sup> puede provocar efectos<br>secundarios graves. Consulte “¿Qué es lo más<br>importante que debo saber sobre TREMFYA<sup>®</sup>?”</b></p>
+                        <p class="medium-margin"><b class="teal-copy">Los efectos secundarios más frecuentes de TREMFYA<sup>®</sup><br>se incluyen los siguientes: </b>infecciones en el tracto<br>respiratorio superior, dolor de cabeza, reacciones en el lugar<br>de la inyección, dolor en las articulaciones (artralgia),<br>diarrea, gripe estomacal (gastroenteritis), infecciones por<br>hongos de la piel e infecciones por herpes simple y<br>bronquitis.</p>
+                        <p class="medium-margin">Estos no son todos los posibles efectos secundarios de<br>TREMFYA<sup>®</sup>. Llame al médico para pedir asesoría médica<br>sobre los efectos secundarios.</p>
+                        <p class="medium-margin">Utilice TREMFYA<sup>®</sup> exactamente como le indicó el proveedor<br>de atención médica.</p>
+                        <p class="bold-copy medium-margin"><span class="teal-copy">Lea la </span><span id="ISI_PI_exit" class="exits teal-copy"><a href="https://www.janssenlabels.com/package-insert/product-monograph/prescribing-information/TREMFYA-pi.pdf" target="_blank">información completa de prescripción</a></span><span class="teal-copy">, incluida la </span><span id="ISI_MG_exit" class="exits teal-copy"><a href="https://www.janssenlabels.com/package-insert/product-patient-information/TREMFYA-medication-guide.pdf" target="_blank">Guía del medicamento</a></span><span class="teal-copy"> para TREMFYA<sup>®</sup>, y hable con su<br>médico si tiene alguna pregunta.</span></p>
                         <p class="large-margin bold-copy"><span class="teal-copy">Se le alienta a que informe los efectos secundarios<br>negativos de los medicamentos recetados a la FDA.<br>Visite <span id="ISI_FDA_exit" class="exits"><a href="https://www.fda.gov/medwatch" target="_blank">www.fda.gov/medwatch</a></span> o llame al<br><span class="nowrap">1‐800‐FDA‐1088</span>.</span>
                         </p>
                         <p class="large-margin">cp-254705v3</p>
@@ -295,7 +295,7 @@
         const element = document.querySelector('#isi-container');
         const element2 = document.querySelector('#isi-container-hm');
         let isHovered = false;
-        let speed = .165; // Change as needed
+        let speed = .465; // Change as needed
     
         function autoScroll(elem, scrollPos, spd) {
         let scrollAmount = scrollPos;
